--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, inicial-scale=1.0"
+    <title>Alura Flix</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+    Alura Flix
+    </header>
+
+    <main>
+         <section class="chamada">
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
     
 </body>
 </html>
